--- a/阅读笔记/HTTP权威指南/第十三章：摘要认证.md
+++ b/阅读笔记/HTTP权威指南/第十三章：摘要认证.md
@@ -1,3 +1,35 @@
 # HTTP 权威指南
 
 ## 第 13 章 摘要认证
+
+1. 摘要认证是另一种 HTTP 认证协议，它试图修复基本认证协议的严重缺陷，进行了如下改进：
+
+    - 永远不会以明文方式在网络上发送密码
+    - 可以防止恶意用户捕获并重放认证的握手阶段
+    - 可以有选择地防止对报文内容的篡改
+    - 防范其他几种常见的攻击方式
+
+2. 摘要认证并不是最安全的协议。摘要认证并不能满足安全 HTTP 事务的很多需求，对这些需求来说，使用传输层安全（TLS）和安全 HTTP（HTTPS）协议更为合适一些。
+
+3. 摘要认证遵循的是“绝不通过网络发送密码”，客户端不会发送密码，而是会发送一个“指纹”或密码的“摘要”，这是密码的不可逆扰码。客户端和服务器都知道这个密码，因此服务器可以验证所提供的摘要是否与密码相匹配。
+
+4. 摘要认证的工作原理：
+
+    - 客户端请求了某个受保护文档
+    - 在客户端能够证明其知道密码从而确认身份之前，服务器拒绝提供文档。服务器向客户端发起质询，询问用户名和摘要形式的密码。
+    - 客户端传递了密码的摘要，证明它是知道密码的。服务器知道所有用户的密码，因此可以将客户提供的摘要与服务器自己计算得到的摘要进行比较，以验证用户是否知道密码。另一方在不知道密码的情况下，很难伪造出正确的摘要。
+    - 服务器将客户端提供的摘要与服务器内部计算出的摘要进行对比。如果匹配，说明客户端知道密码。可以设置摘要函数，使其产生很多数字，让人不可能猜中摘要。
+
+5. 单向摘要：摘要是“对信息主体的浓缩”。摘要是一种单向函数，主要用于将无限的输入值转换为有限的浓缩输出值。常见的摘要函数 MD5，会将任意长度的字节序列转换为一个 128 位的摘要。对这些摘要来说，最重要的是如果不知道密码的话，要想正确地猜出发送给服务器的摘要将是非常困难的。同样，如果有摘要，想要判断出它是有无数输入值中的哪一个产生的，也是非常困难的。
+
+6. MD5 输出的 128 位摘要通常会被写成 32 个十六进制的字符，每个字符表示 4 位。有时也将摘要函数称为加密的校验和、单向散列函数或指纹函数。
+
+7. 用随机数防止重放攻击：使用单向摘要就无需以明文形式发送密码了，可以只发送密码的摘要。但是仅仅隐藏密码并不能避免危险，因为即便不知道密码，也可以通过截获摘要，并一遍遍地重放给服务器。摘要和密码一样好用。为防止此类重放攻击的发生，服务器可以向客户端发送一个称为随机数的特殊令牌，这个数会经常发生变化。客户端在计算摘要之前要先将这个随机数令牌附加到密码上去。在密码中加入随机数就会使摘要随着随机数的每一次变化而变化。记录下的密码摘要只对特定的随机值有效，而没有密码的话，攻击者就无法计算出正确的摘要，这样就可以防止重放攻击的发生。
+
+8. 摘要认证的握手机制：HTTP 摘要认证协议是一种升级版的认证方式，所用首部与基本认证类似。
+
+    1. 服务器会计算出一个随机数，将随机数放在 WWW-Authenticate 质询报文中，与服务器所支持的算法列表一同发往客户端。
+    2. 客户端选择一个算法，计算出密码和其他数据的摘要。将摘要放在一条 Authorization 报文中发回服务器。如果客户端要对服务器进行认证，可以发送客户端随机数。
+    3. 服务器接收摘要、选中的算法以及支撑数据，计算出与客户端相同的摘要。然后服务器将本地生成的摘要与网络传送过来的摘要进行比较，验证其是否匹配。如果客户端反过来用客户端随机数对服务器进行质询，就会创建客户端摘要。服务器可以预先将下一个随机数计算出来，提前将其传递给客户端，这样下一次客户端就可以预先发送正确地摘要了。
+
+9. 摘要的计算：摘要认证的核心就是对公共信息、保密信息和有时限的随机值这个组合的单向摘要。
