--- a/阅读笔记/HTTP权威指南/第十三章：摘要认证.md
+++ b/阅读笔记/HTTP权威指南/第十三章：摘要认证.md
@@ -33,3 +33,11 @@
     3. 服务器接收摘要、选中的算法以及支撑数据，计算出与客户端相同的摘要。然后服务器将本地生成的摘要与网络传送过来的摘要进行比较，验证其是否匹配。如果客户端反过来用客户端随机数对服务器进行质询，就会创建客户端摘要。服务器可以预先将下一个随机数计算出来，提前将其传递给客户端，这样下一次客户端就可以预先发送正确地摘要了。
 
 9. 摘要的计算：摘要认证的核心就是对公共信息、保密信息和有时限的随机值这个组合的单向摘要。
+
+10. 预授权：在普通的认证方式中，事务结束之前，每条请求都要又一次请求/质询的循环，如果客户端事先知道下一个随机数是什么，就可以取消这个请求/质询循环，这样客户端就可以在服务器发出请求之前，生成正确地 Authorization 首部了。如果客户端能在服务器要求它计算 Authorization 首部之前计算出来，就可以预先将 Authorization 首部发送给服务器，而不用进行请求/质询了。摘要认证提供了三种可选的预授权方式：
+
+    1. 服务器预先在 Authenticate-Info 成功首部中发送下一个随机数；
+    2. 服务器允许在一小段时间内使用同一个随机数；
+    3. 客户端和服务器使用同步的、可预测的随机数生成算法；
+
+11. 选择明文攻击：使用摘要认证的客户端会用服务器提供的随机数来生成响应，但如果中间有一个被入侵的或恶意的代理在拦截流量，就可以很容易地为客户端的响应计算提供随机数。使用已知密钥来计算响应可以简化相应的密码分析过程。
