--- a/阅读笔记/HTTP权威指南/第十五章：实体和编码.md
+++ b/阅读笔记/HTTP权威指南/第十五章：实体和编码.md
@@ -1,3 +1,36 @@
 # HTTP 权威指南
 
 ## 第 15 章 实体和编码
+
+1. HTTP/1.1 版定义了 10 个基本实体首部字段：
+
+   1. Content-Type：实体中承载对象的类型
+   2. Content-Length：所传送实体主体的长度或大小
+   3. Content-Language：与所传送对象最相配的人类语言
+   4. Content-Encoding：对象数据所做的任意变换
+   5. Content-Location：一个备用位置，请求时可通过它获得对象
+   6. Content-Range：如果这是部分实体，这个首部说明它是整体的哪个部分
+   7. Content-MD5：实体主体内容的校验和
+   8. Last-Modified：所传输内容在服务器上创建或最后修改的日期时间
+   9. Expires：实体数据将要失效的日期时间
+   10. Allow：该资源所允许的各种请求方法
+   11. ETag：这份文档特定实例的唯一验证码。没有正式定义为实体首部。
+   12. Cache-Control：指出该如何缓存文档。没有正式定义为实体首部。
+
+2. Content-Length 首部指示出报文中实体主体的字节大小。这个大小是包含了所有内容编码的，比如对文本文件进行了 gzip 压缩的话，Content-Length 首部就是压缩后的大小，而不是原始大小。除非使用了分块编码，否则 Content-Length 首部就是带有实体主体的报文必须使用的。使用 Content-Length 首部是为了能够检测出服务器崩溃而导致的报文截尾，并对共享持久连接的多个报文进行正确分段。
+
+3. 检测截尾：HTTP 的早期版本采用关闭连接的颁发来规定报文的结束。但是没有 Content-Length 的话，客户端无法区分到底是报文结束时正常的连接关闭，还是报文传输中由于服务器崩溃而导致的连接关闭。客户端需要通过 Content-Length 来检测报文截尾。
+
+4. Content-Length 与持久连接：Content-Length 首部对于持久连接是必不可少的。如果响应通过持久连接传送，就可能有另一条 HTTP 响应紧随其后。客户端通过 Content-Length 首部就可以知道报文在何处结束，下一条报文从何处开始。因为连接是持久的，客户端无法依赖连接关闭来判断报文的结束。
+
+5. 内容编码：HTTP 允许对实体主体的内容进行编码，比如可以使之更安全或进行压缩以节省空间。如果主体进行了内容编码，Content-Length 首部说明的就是编码后的主体的字节长度，而不是未编码的原始主体的长度。
+
+6. 确定实体主体长度的规则：
+
+   1. 如果特定的 HTTP 报文类型中不允许带有主体，就忽略 Content-Length 首部，它是对主体进行计算的。这种情况下，Content-Length 首部是提示性的，并不说明实际的主体长度。
+   2. 如果报文含有描述传输编码的 Transfer-Encoding 首部，那实体就应由一个称为“零字节块”的特殊模式结束，除非报文已经因为连接关闭而结束。
+   3. 如果报文中含有 Content-Length 首部，而且没有非恒等的 Transfer-Encoding 首部字段，那么 Content-Length 的值就是主体的长度。如果收到的报文中既有 Content-Length 首部字段又有非恒等的 Transfer-Encoding 首部字段，那就必须忽略 Content-Length，因为传输编码会改变实体主体的表示和传输方式。
+   4. 如果报文使用了 multipart/byteranges(多部分/字节范围)媒体类型，并且没有用 Content-Length 首部指出实体主体的长度，那么多部分报文中的每个部分都要说明它自己的大小。这种多部分类型是唯一的一种自定界的实体主体类型，因此除非发送方知道接收方可以解析它，否则就不能发送这种媒体类型。
+   5. 如果上面的规则都不匹配，实体就在连接关闭的时候结束。
+
+7. 实体摘要
