--- a/阅读笔记/HTTP权威指南/第十五章：实体和编码.md
+++ b/阅读笔记/HTTP权威指南/第十五章：实体和编码.md
@@ -33,4 +33,42 @@
    4. 如果报文使用了 multipart/byteranges(多部分/字节范围)媒体类型，并且没有用 Content-Length 首部指出实体主体的长度，那么多部分报文中的每个部分都要说明它自己的大小。这种多部分类型是唯一的一种自定界的实体主体类型，因此除非发送方知道接收方可以解析它，否则就不能发送这种媒体类型。
    5. 如果上面的规则都不匹配，实体就在连接关闭的时候结束。
 
-7. 实体摘要
+7. 实体摘要：为检测实体主体数据是否被修改过，发送方可以在生成初始的主体时，生成一个数据的校验和，这样接收方就可以通过检查这个校验和来捕获所有意外的实体修改了。
+
+8. 服务器使用 Content-MD5 首部发送对实体主体运行 MD5 算法的结果。只有产生响应的原始服务器可以计算并发送 Content-MD5 首部。中间代理和缓存不应当修改或添加这个首部，否则就会与验证端到端完整性这个最终目的相冲突。
+
+9. 内容编码：HTTP 应用程序有时在发送之前需要对内容进行编码。例如压缩或加密。
+
+10. 内容编码过程：
+
+    1. 服务器生成原始响应报文，其中有原始的 Content-Type 和 Content-Length 首部。
+    2. 内容编码服务器创建编码后的报文。编码后的报文有同样的 Content-Type 但 Content-Length 可能不同。内容编码服务器在编码后的报文中增加 Content-Encoding 首部，这样接收的应用程序就可以进行解码了。
+    3. 接收程序得到编码后的报文，进行解码，获得原始报文。
+
+11. Accept-Encoding 首部：为了避免服务器使用客户端不支持的编码方式，客户端就把自己支持的内容编码方式列表放在请求的 Accept-Encoding 首部里发出去。如果 HTTP 请求中没有包含 Accept-Encoding 首部，服务器就可以假设客户端能够接受任何编码方式。
+
+12. 传输编码和分块编码：传输编码是作用在实体主体上的可逆变换，但使用它们是由于架构方面的原因，同内容的格式无关。
+
+13. 在 HTTP 中，只有少数一些情况下，所传输的报文主体可能会引发问题：
+
+    1. 未知的尺寸：如果不先生成内容，某些网关应用程序和内容编码器就无法确定报文主体的最终大小。通常，这些服务器希望在知道大小之前就开始传输数据。因为 HTTP 协议要求 Content-Length 首部必须在数据之前，有些服务器就使用传输编码来发送数据，并用特别的结束脚注表明数据结束。
+    2. 安全性：可以使用传输编码来把报文内容扰乱，然后在共享的传输网络上发送。但是由于像 SSL 这样的传输层安全体系的流行，很少需要靠传输编码来实现安全性。
+
+14. HTTP 协议中只定义了下面两个首部来描述和控制传输编码：
+
+    1. Transfer-Encoding：告知接收方为了可靠地传输报文，已对其进行了何种编码。
+    2. TE：用在请求首部中，告知服务器可以使用哪些传输编码扩展。
+
+15. 分块编码：分块编码是把报文分割为若干个大小已知的块，块之间是紧挨着发送的，这样就不需要在发送之前知道整个报文的大小了。要注意的是，分块编码是一种传输编码，因此是报文的属性，而不是主体的属性。
+
+16. 当使用持久连接时，在服务器写主体之前，必须知道它的大小并在 Content-Length 首部中发送。如果服务器动态创建内容，就可能在发送之前无法知道主体的长度。分块编码为这种困难提供了解决方案，只要允许服务器把主体逐块发送，说明每块的大小就可以了。因为主体是动态创建的，服务器可以缓冲它的一部分，发送其大小和相应的块，然后在主体发送完成之前重复这个过程。服务器可以用大小为 0 的块作为主体结束的信号。
+
+17. 传输编码的规则：
+
+    1. 传输编码集合中必须包括“分块”。唯一的例外是使用关闭连接来结束报文。
+    2. 当使用分块传输编码时，它必须是最后一个作用到报文主体之上的。
+    3. 分块传输编码不能多次作用到一个报文主体上。
+
+18. 范围请求：HTTP 允许客户端实际上只请求文档的一部分。Range 首部。
+
+19. 差异编码：差异编码是 HTTP 协议的一个扩展，它通过交换对象改变的部分而不是完整的对象来优化传输性能。
