--- a/阅读笔记/HTTP权威指南/第十六章：国际化.md
+++ b/阅读笔记/HTTP权威指南/第十六章：国际化.md
@@ -1,3 +1,35 @@
 # HTTP 权威指南
 
 ## 第 16 章 国际化
+
+1. HTTP 报文中可以承载以任何语言表示的内容，对 HTTP 来说，实体主体只是二进制信息的容器而已。
+
+2. 服务器通过 HTTP 协议的 Content-Type 首部中的 charset 参数和 Content-Language 首部告知客户端文档的字母表和语言。客户端发送 Accept-Charset 首部和 Accept-Language 首部，告知服务器它理解哪些字符集编码算法和语言以及其中的优先顺序。
+
+3. 字符集是把字符转换为二进制码的编码，HTTP 字符集的值说明如何把实体内容的二进制码转换为特定字母表中的字符。每个字符集标记都命名了一种把二进制码转换为字符的算法。
+
+4. 把二进制码转换为字符要经过两个步骤：
+
+   1. 文档中的二进制码转换成字符代码，它表示了特定编码字符集中某个特定编号的字符。
+   2. 在字符集中用字符编码选出特定的元素。
+
+5. 字符集术语：
+
+   - 字符：字符是指字母、数字、标点、表意文字、符号或其他文本形式的书写“原子”。
+   - 字形：描述字符的笔画图案或唯一的图形化形状。
+   - 编码后的字符：分配给字符的唯一数字编号。
+   - 代码空间：计划用于字符代码值的证书范围。
+   - 代码宽度：每个字符代码所用的位数。
+   - 字符库：特定的工作字符集。
+   - 编码后的字符集：组成字符库的已编码字符集，并为每个字符分配代码空间中的一个代码。它把数字化的字符代码映射为实际的字符。
+   - 字符编码方案：把数字化的字符代码编码成一系列二进制码的算法。字符编码方案可用来减少识别字符所需要的数据总量、解决传输限制、统一重叠编码字符集。
+
+6. 字符编码方案：
+
+   - 固定宽度：固定宽度方式的编码用固定数量的比特表示每个编码后的字符。它们能被快速处理，但可能会浪费空间。
+   - 可变宽度（无模态）：可变宽度方式的编码对不同的字符代码数字采用不同数量的比特。对于常用字符，这样可以减少需要的位数，而且还能在允许使用多字节来表示国际性字符的同时，保持对传统 8 位字符集的兼容性。
+   - 可变宽度（有模态）：有模态的编码使用特殊的“转义”模式在不同的模态之间切换。有模态的编码处理起来比较复杂，但它们可以有效地支持复杂的书写系统。
+
+7. UTF-8 是一种流行的为 UCS 设计的字符编码方案，UTF 表示 UCS 变换格式。UTF-8 为字符代码值使用的是无模态的变宽编码，第一个字节的高位表示编码后的字符所用的字节数，所需要的每个后续字节都包含有 6 位的代码值。
+
+8. 转义和反转义：URI 转义提供了一种安全的方式，可以在 URI 内部插入保留字符以及原本不支持的字符（比如各种空白）。每个转义是一组 3 字符序列，由百分号后面跟上两个十六进制数字的字符。这两个十六进制数字就表示一个 US-ASC2 字符的代码。
