--- a/阅读笔记/HTTP权威指南/第十七章：内容协商与转码.md
+++ b/阅读笔记/HTTP权威指南/第十七章：内容协商与转码.md
@@ -1,3 +1,13 @@
 # HTTP 权威指南
 
 ## 第 17 章 内容协商与转码
+
+1. 内容协商技术：有 3 种不同的方法可以决定服务器上哪个页面最适合客户端：
+
+   1. 客户端驱动：客户端发起请求，服务器发送可选项的列表，客户端选择
+   2. 服务器驱动：服务器检查客户端的请求首部集并决定提供哪个版本的页面
+   3. 透明：某个中间设备代表客户端进行请求协商
+
+2. 有两种机制可供 HTTP 服务器评估发送什么响应给客户端比较合适：
+   - 检查内容协商首部集。服务器查看客户端发送的 Accept 首部集，设法用相应的响应首部与之匹配。
+   - 根据其他（非内容协商）首部进行变通。例如 User-Agent 首部。
