--- a/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
+++ b/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
@@ -31,4 +31,18 @@
 6. 优先从缓存加载：与前端浏览器会缓存静态脚本文件以提高性能一样，Node 对引入过的模块都会进行缓存，以减少二次引入时的开销。不同的地方在于，浏览器仅仅缓存文件，而 Node 缓存的是编译和执行之后的对象。不论是核心模块还是文件模块，require()方法对相同模块的二次加载都一律采用缓存优先的方式，这是第一优先级的。不同之处在于核心模块的缓存检查先于文件模块的缓存检查。
 
 7. 路径分析和文件定位：对于不同的标识符，模块的查找和定位有不同程度上的差异。
+
    1. 模块标识符分析：
+      - 核心模块，如 http, fs, path 等：核心模块的优先级仅次于缓存加载，它在 Node 的源代码编译过程中已经编译为二进制代码，其加载过程最快。
+      - `.`或`..`开始的相对路径文件模块：相对路径和绝对路径都被当作文件模块来处理，分析文件模块时`require()`方法会将路径转为真实路径，并以真是路径作为索引，将编译执行后的结果存放到缓存中，以使二次加载时更快。由于文件模块给 Node 指明了确切的文件为止，所以在查找过程中可以节约大量时间，其加载速度慢于核心模块。
+      - 以`/`开始的绝对路径文件模块
+      - 非路径形式的文件模块：非核心模块，也不是路径形式的标识符，它是一种特殊的文件模块，可能是一个文件或者包的形式。这类模块的查找是最费时的，也是所有方式中最慢的一种。
+   2. 文件定位：从缓存加载的优化策略使得二次引入时不需要路径分析、文件定位和编译执行的过程，大大提高了再次加载模块时的效率。
+      - 文件扩展名分析：`require()`在分析标识符的过程中，会出现标识符中不包含文件扩展名的情况。CommonJS 模块规范也允许在标识符中不含文件扩展名，这种情况下，Node 会按`.js, .json, .node`的次序补足扩展名，依次尝试。在尝试的过程中，需要调用 fs 模块同步阻塞地判断文件是否存在。因为 Node 是单线程的，所以这里是一个会引起性能问题的地方。可以通过带扩展名传递给`require()`，会加快一点速度。也可以同步配合缓存，大幅度缓解 Node 单线程中阻塞式调用的缺陷。
+      - 目录分析和包：
+
+8. 模块路径的生成规则：文件的路径越深，模块查找耗时会越多，这是自定义模块的加载速度是最慢的原因。
+   - 当前文件目录下的 node_modules 目录
+   - 父目录下的 node_modules 目录
+   - 父目录的父目录下的 node_modules 目录
+   - 沿路径向上逐级递归，直到根目录下的 node_modules 目录
