--- a/日志/2019/0826-0901.md
+++ b/日志/2019/0826-0901.md
@@ -3,3 +3,52 @@
 ---
 
 **[JavaScript to Know for React](https://kentcdodds.com/blog/javascript-to-know-for-react)**
+
+---
+
+**[为何 shadowsocks 要弃用一次性验证 (OTA)](https://blessing.studio/why-do-shadowsocks-deprecate-ota/)**
+
+**OTA 是什么:**
+
+OTA（One Time Auth，一次性验证），是之前 shadowsocks 为了增强安全性，抵抗 CCA（Chosen-ciphertext Attack，选择密文攻击）而加入的实验性功能。
+
+**原协议的缺陷:**
+
+正如上表所示，原始 shadowsocks 协议 TCP 握手包中的 IV 字段是 Fixed（定长）的。不同的加密算法 IV 长度不同，对于 rc4-md5 和 aes 系列等常用算法，这个长度是 16 字节。各加密算法的详细信息可以在 官方文档 - Cipher 查看。而服务端为了判断数据是否有效，会检查数据包中表示地址信息的那个字节，看它是不是上面提到的三个可能取值。如果是，就尝试解析后面的地址和端口进行连接；如果不是，立即断开连接。正是 shadowsocks 服务器的这个行为使得主动探测成为可能。
+
+**主动探测的原理:**
+
+一般来讲，「表示地址类型的那个字节」是被加密后发送的，所以第三方无法精确的修改它。但是不巧的是，shadowsocks 所有的加密方式都是 stream cipher（流加密），而这种加密方式的特点就是「明文数据流与密钥数据流一一对应」。
+
+通俗地讲，即对应修改了某个位置的密文（根据加密模式的不同，可能影响到后面其他密文块的解密，也可能影响不到，但在这里这个性质并不重要），如果预先知道了明文的模式，虽然无法解密还原出内容，但可以修改密文中的特定字节，起到修改解密后的明文的效果。
+
+根据流加密的这个特性，坏东西们就可以通过伪造 `TCP` 数据包来主动探测 `shadowsocks` 服务器了。攻击者只要暴力尝试修改加密后的数据包中 `IV` 之后紧接着的那个字节（如果使用的加密算法 `IV` 长度为 16 字节，那么就修改第 17 个字节），穷举 `2^8 = 256` 种可能性，如果被测试的服务器有一种到三种情况下没有立即关闭连接，就可以判断出这台机子的这个端口开放的是 `shadowsocks` 服务。
+
+---
+
+`${}`变量的正规表达式: bash 对 `${}` 定义了不少用法。
+
+参数替换：
+- `${var_name}等价于$var_name（通常用这种简写方式）`
+- `$(var:-default) 和$(var-default)`: `$(var:-default) 当var为空或未定义时整个表达式的值为default, $(var-default) 当且仅当var未定义时整个表达式的值为default`
+- `$(var:=default) 和$(var=default)`: `$(var:=default) 当var为空或未定义时整个表达式的值为default，并且将var的值设置为default, $(var=default) 当且仅当var未定义时整个表达式的值为default，并且将var的值设置为default`
+- `$(var:?default) 和$(var?message)`: `$(var:?message) 当var为空或未定义时，打印错误信息，信息内容为message表示的值, $(var?message) 当且仅当var未定义时，打印错误信息，信息内容为message表示的值`
+- `$(var:+default) 和$(var+default)`: `$(var:+default) 当var已定义且不为空时整个表达式的值为default, $(var+default) 当var已定义时真个表达式的值为default(不管var是否是空)`
+
+字符串截取：
+- `${str:offest}` 从下标offset(含)开始截取到末尾的子串
+- `${str:offest:length}` 从下表offset(含)开始向后截取长度为length的子串，长度超出不报错
+- `${str:offest:index}` 此处的index为负数，最后一个字符为-1，依次往前为-2,-3。此表达式截取offset(含)到index(不含)之间的子串，当index表示的位置在offset左边时会报错
+
+变量匹配:
+- `${!prefix*}、${!prefix@} 将带有前缀为prefix的变量名打印出来`
+
+数组操作:
+- `${!name[@]}、${!name[*]}` 将数组name的所有下标返回，如果变量name不是数组则返回0,不存在则空
+- `${name[@]}、${name[*]}` 将数组name的所有元素返回，如果变量name不是数组则返回name的值,不存在则空 
+- `${name[index]}` 将数组name的index处的元素返回，如果变量name不是数组且index为0时返回name的值,变量或index处的元素不存在则返回空
+
+正则匹配替换:
+- `${parameter#word}、${parameter##word}`: 从头开始扫描word，将匹配word正则表达的字符过滤掉 `#`为最短匹配，`##`为最长匹配
+- `${parameter%word}、${parameter%%word}`: 从尾开始扫描word，将匹配word正则表达式的字符过滤掉, `%`为最短匹配，`%%`为最长匹配
+- `${parameter/pattern/string}、${parameter//pattern/string}`: `/`表示只替换一次, `//`表示全部替换
