--- a/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
+++ b/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
@@ -39,10 +39,19 @@
       - 非路径形式的文件模块：非核心模块，也不是路径形式的标识符，它是一种特殊的文件模块，可能是一个文件或者包的形式。这类模块的查找是最费时的，也是所有方式中最慢的一种。
    2. 文件定位：从缓存加载的优化策略使得二次引入时不需要路径分析、文件定位和编译执行的过程，大大提高了再次加载模块时的效率。
       - 文件扩展名分析：`require()`在分析标识符的过程中，会出现标识符中不包含文件扩展名的情况。CommonJS 模块规范也允许在标识符中不含文件扩展名，这种情况下，Node 会按`.js, .json, .node`的次序补足扩展名，依次尝试。在尝试的过程中，需要调用 fs 模块同步阻塞地判断文件是否存在。因为 Node 是单线程的，所以这里是一个会引起性能问题的地方。可以通过带扩展名传递给`require()`，会加快一点速度。也可以同步配合缓存，大幅度缓解 Node 单线程中阻塞式调用的缺陷。
-      - 目录分析和包：
+      - 目录分析和包：在分析标识符的过程中，`require()`通过分析文件扩展名之后，可能没有查找到对应文件，但却得到了一个目录，这在引入自定义模块和逐个模块路径进行查找时经常会出现，此时 Node 会将目录当作一个包来处理。Node 通过解析`package.json`中 main 字段解析出入口文件，如果 main 字段指定错误，或者没有 package.json 文件，Node 会将 index 当做默认文件名，然后依次查找 index.js、index.json、index.node。
+   3. 模块编译：在 Node 中，每个文件模块都是一个对象。编译和执行是引入文件模块的最后一个阶段。定位到具体的文件后，Node 会新建一个模块对象，然后根据路径载入并编译。对于不同的文件扩展名，其载入方法也有所不同：
+      1. `.js`文件：通过 fs 模块同步读取文件后编译执行
+      2. `.node`文件：这是用 C/C++编写的扩展文件，其载入方法也有所不同，通过 dlopen()方法加载最后编译生成的文件
+      3. `.json`文件：通过 fs 模块同步读取文件后，用`JSON.parse()`解析返回结果
+      4. 其余扩展名文件：都被当做.js 文件载入。
+      5. 每一个编译成功的模块都会将其文件路径作为索引缓存在 Module.\_cache 对象上，以提高二次引入的性能。
 
 8. 模块路径的生成规则：文件的路径越深，模块查找耗时会越多，这是自定义模块的加载速度是最慢的原因。
+
    - 当前文件目录下的 node_modules 目录
    - 父目录下的 node_modules 目录
    - 父目录的父目录下的 node_modules 目录
    - 沿路径向上逐级递归，直到根目录下的 node_modules 目录
+
+9. 核心模块：Node 的核心模块在编译成可执行文件的过程中被编译进了二进制文件。核心模块其实分为 C/C++编写的和 JavaScript 编写的两部分，其中 C/C++文件存放在 Node 项目的 src 目录下，JavaScript 文件存放在 lib 目录下。
