--- a/日志/2019/0826-0901.md
+++ b/日志/2019/0826-0901.md
@@ -52,3 +52,7 @@ OTA（One Time Auth，一次性验证），是之前 shadowsocks 为了增强安
 - `${parameter#word}、${parameter##word}`: 从头开始扫描word，将匹配word正则表达的字符过滤掉 `#`为最短匹配，`##`为最长匹配
 - `${parameter%word}、${parameter%%word}`: 从尾开始扫描word，将匹配word正则表达式的字符过滤掉, `%`为最短匹配，`%%`为最长匹配
 - `${parameter/pattern/string}、${parameter//pattern/string}`: `/`表示只替换一次, `//`表示全部替换
+
+---
+
+**[MVC，MVP 和 MVVM 的图示](http://www.ruanyifeng.com/blog/2015/02/mvcmvp_mvvm.html)**
