--- a/日志/2019/0826-0901.md
+++ b/日志/2019/0826-0901.md
@@ -56,3 +56,7 @@ OTA（One Time Auth，一次性验证），是之前 shadowsocks 为了增强安
 ---
 
 **[MVC，MVP 和 MVVM 的图示](http://www.ruanyifeng.com/blog/2015/02/mvcmvp_mvvm.html)**
+
+---
+
+**[SQL select case用法](https://www.cnblogs.com/Richardzhu/p/3571670.html)**
