--- a/日志/2019/0902-0908.md
+++ b/日志/2019/0902-0908.md
@@ -21,3 +21,29 @@
   "supports-color": "^5.5.0"
 }
 ```
+
+---
+
+**create-react-app调研**
+
+工程依赖
+
+- execa: 进程相关
+- fs-extra: fs模块加强版，对文件操作
+- get-port: 获取一个TCP端口
+- globby: 加强版glob，文件名匹配
+- husky: git hooks管理
+- lerna: js工程多包管理工具
+- lerna-changelog: 支持根据PR生成changelog
+- meow: ???
+- multimatch: `multimatch(['unicorn', 'cake', 'rainbows'], ['*', '!cake']); //=> ['unicorn', 'rainbows']`
+- strip-ansi: 将asc码转为unicode
+- svg-term-cli: svg图片在控制台展示
+- tempy: 生成一个随机文件名或文件路径
+- wait-for-localhost: 等待端口空闲
+- eslint
+- lint-staged
+- chalk: 终端颜色输出
+
+---
+
