--- a/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
+++ b/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
@@ -62,7 +62,12 @@
     2. 编译 JavaScript 核心模块：lib 目录下的所有模块文件也没有定义 require、module、exports 这些变量。在引入 JavaScript 核心模块的过程中，也经历了头尾包装的过程，然后才执行和导出了 exports 对象。与文件模块有区别的地方在于：获取源代码的方式（核心模块是从内存中加载的）以及缓存执行结果的位置。
 
 11. C/C++核心模块的编译过程：在核心模块中，有些模块全部由 C/C++编写，有些模块则由 C/C++完成核心部分，其他部分则由 JavaScript 实现包装或向外导出，以满足性能需求。后面这种 C++模块主内完成核心，JavaScript 主外实现封装的模式是 Node 能够提高性能的常见方式。由纯 C/C++编写的部分统一称为内建模块，因为它们通常不被用户直接调用。
+
     1. 内建模块的组织形式：每一个内建模块在定义之后，都通过 NODE_MODULE 宏将模块定义到 node 命名空间中，模块的具体初始化方法挂在为结构的 register_func 成员。内建模块的优势在于，首先它们本身由 C/C++编写，性能上优于脚本语言，其次在进行文件编译时，它们被编译进二进制文件。一旦 Node 开始执行，它们被直接加载进内存中，无需再次做标识符定位、文件定位、编译等过程，直接就可执行。
     2. 内建模块的导出：通常不推荐文件模块直接调用内建模块，如需调用直接调用核心模块即可，因为核心模块中基本都封装了内建模块。Node 在启动时，会生成一个全局变量 process，并提供 Binding()方法来协助加载内建模块。在加载内建模块时，先创建一个 exports 空对象，然后调用 get_builtin_module()方法取出内建模块，通过执行 register_func()填充 exports 对象，最后将 exports 对象按模块名缓存，并返回给调用方完成导出。
 
-12. 
+12. C/C++扩展模块与 JavaScript 模块的区别在于加载后不需要编译，直接执行之后就可以被外部调用了，其加载速度比 JavaScript 略快。使用 C/C++扩展模块的一个好处在于可以更灵活和动态地加载它们，保持 Node 模块自身简单性的同时，给予 Node 无限的可扩展性。
+
+13. JavaScript核心模块主要扮演的职责有两类：一类是作为C/C++内建模块的封装层和桥接层，供文件模块调用；一类是纯粹的功能模块，它不需要跟底层打交道，但是又十分重要。
+
+14. 
