--- a/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
+++ b/阅读笔记/深入浅出NodeJS/第二章：模块机制.md
@@ -68,6 +68,16 @@
 
 12. C/C++扩展模块与 JavaScript 模块的区别在于加载后不需要编译，直接执行之后就可以被外部调用了，其加载速度比 JavaScript 略快。使用 C/C++扩展模块的一个好处在于可以更灵活和动态地加载它们，保持 Node 模块自身简单性的同时，给予 Node 无限的可扩展性。
 
-13. JavaScript核心模块主要扮演的职责有两类：一类是作为C/C++内建模块的封装层和桥接层，供文件模块调用；一类是纯粹的功能模块，它不需要跟底层打交道，但是又十分重要。
+13. JavaScript 核心模块主要扮演的职责有两类：一类是作为 C/C++内建模块的封装层和桥接层，供文件模块调用；一类是纯粹的功能模块，它不需要跟底层打交道，但是又十分重要。
 
-14. 
+14. 一个质量优秀的 npm 模块：
+
+    1. 具备良好的测试
+    2. 具备良好的文档
+    3. 具备良好的测试覆盖率
+    4. 具备良好的编码条件
+
+15. 前后端共用模块：
+    1. 模块的侧重点：前端模块需要经历从同一个服务器端分发到多个客户端执行，服务器端模块则是相同的代码需要多次执行。前者的瓶颈在于带宽，后者的瓶颈则在于 CPU 和内存等资源。前者需要从网络加载，后者从磁盘加载，两者的加载速度不在一个数量级上。
+    2. 多种规范：AMD 规范、CMD 规范、CommonJS
+    3. 兼容多种模块规范：需要让模块能够在不同的运行环境中执行。
