--- a/日志/2019/0902-0908.md
+++ b/日志/2019/0902-0908.md
@@ -47,3 +47,11 @@
 
 ---
 
+```javascript
+// 获取路径下所有的文件夹名称，排除node_modules
+function getAllDirNameSync(dirPath, options) {
+  return fs.readdirSync(dirPath, options).filter(dirName => {
+    return fs.lstatSync(path.resolve(dirPath, dirName)).isDirectory()
+  })
+}
+```
