--- a/日志/2019/0902-0908.md
+++ b/日志/2019/0902-0908.md
@@ -24,21 +24,21 @@
 
 ---
 
-**create-react-app调研**
+**create-react-app 调研**
 
 工程依赖
 
 - execa: 进程相关
-- fs-extra: fs模块加强版，对文件操作
-- get-port: 获取一个TCP端口
-- globby: 加强版glob，文件名匹配
-- husky: git hooks管理
-- lerna: js工程多包管理工具
-- lerna-changelog: 支持根据PR生成changelog
+- fs-extra: fs 模块加强版，对文件操作
+- get-port: 获取一个 TCP 端口
+- globby: 加强版 glob，文件名匹配
+- husky: git hooks 管理
+- lerna: js 工程多包管理工具
+- lerna-changelog: 支持根据 PR 生成 changelog
 - meow: ???
 - multimatch: `multimatch(['unicorn', 'cake', 'rainbows'], ['*', '!cake']); //=> ['unicorn', 'rainbows']`
-- strip-ansi: 将asc码转为unicode
-- svg-term-cli: svg图片在控制台展示
+- strip-ansi: 将 asc 码转为 unicode
+- svg-term-cli: svg 图片在控制台展示
 - tempy: 生成一个随机文件名或文件路径
 - wait-for-localhost: 等待端口空闲
 - eslint
@@ -51,7 +51,17 @@
 // 获取路径下所有的文件夹名称，排除node_modules
 function getAllDirNameSync(dirPath, options) {
   return fs.readdirSync(dirPath, options).filter(dirName => {
-    return fs.lstatSync(path.resolve(dirPath, dirName)).isDirectory()
-  })
+    return fs.lstatSync(path.resolve(dirPath, dirName)).isDirectory();
+  });
 }
+```
+
+---
+
+在 node 中捕获 ctrl+c 事件
+
+```javascript
+process.on("SIGINT", function() {
+  process.exit();
+});
 ```
