--- a/日志/2019/0902-0908.md
+++ b/日志/2019/0902-0908.md
@@ -65,3 +65,37 @@ process.on("SIGINT", function() {
   process.exit();
 });
 ```
+
+---
+
+**[draggable](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Global_attributes/draggable)**
+
+全局属性 draggable 是一个枚举类型的属性，用于标识元素是否允许使用 拖放操作API 拖动。它的取值如下：
+
+- true，表示元素可以被拖动
+- false，表示元素不可以被拖动
+如果该属性没有设值，则默认值 为 auto ，表示使用浏览器定义的默认行为。
+
+这个属性是枚举类型，而不是 布尔类型 。这意味着必须显式指定值为 true 或者 false ，像 `<label draggable>Example Label</label>` 这样的简写是不允许的。正确的用法是 `<label draggable="true">Example Label</label>`。
+
+---
+
+**[Curl Cookbook](https://catonmat.net/cookbooks/curl?utm_source=hackernewsletter&utm_medium=email&utm_term=fav)**
+
+- Make a POST Request (TLDR: Use -X POST argument)
+- Add POST Data to a Request (TLDR: Use -d var=val argument)
+- Construct a Query String (TLDR: Use -G argument)
+- Add HTTP Headers (TLDR: Use -H 'Header: Value' argument)
+- Change the User Agent (TLDR: Use -A 'User Agent' argument)
+- Set Cookies (TLDR: Use -b name=value argument)
+- Add a Referrer (TLDR: Use -e URL argument)
+- Follow a 3XX Redirect (TLDR: Use -L argument)
+- Use the Basic HTTP Authentication (TLDR: Use -u user:pass argument)
+- Print the Response Headers (TLDR: Use -i argument)
+- Use a Proxy (TLDR: Use -x protocol://host:port argument)
+- Ignore the SSL Certificate (TLDR: Use -k argument)
+- Make Curl Silent (TLDR: Use -s argument)
+- Save the Response to a File (TLDR: Use -o file argument)
+- Make Curl Slow (TLDR: Use --limit-rate 8k (8KB/sec) argument)
+- Debug Curl Requests (TLDR: Use -v or --trace arguments)
+- Make a GET Request (TLDR: No arguments required, it's the default)
