--- a/日志/2019/0902-0908.md
+++ b/日志/2019/0902-0908.md
@@ -58,10 +58,10 @@ function getAllDirNameSync(dirPath, options) {
 
 ---
 
-在 node 中捕获 ctrl+c 事件
+在 node 中捕获进程退出事件
 
 ```javascript
-process.on("SIGINT", function() {
+process.on("exit", function() {
   process.exit();
 });
 ```
