--- a/阅读笔记/深入浅出NodeJS/第四章：异步编程.md
+++ b/阅读笔记/深入浅出NodeJS/第四章：异步编程.md
@@ -2,4 +2,45 @@
 
 ## 第 4 章 异步编程
 
+1. 高阶函数：在通常的语言中，函数的参数只接受基本的数据类型或是对象引用，返回值也只是基本数据类型和对象引用。高阶函数则是可以把函数作为参数或者将函数作为返回值的函数。
 
+2. 偏函数用法：偏函数用法是指创建一个调用另一个部分——参数或变量已经预置的函数——的函数的用法。
+
+3. 非阻塞 I/O 可以使 CPU 与 I/O 并不相互依赖等待，让资源得到更好的利用。
+
+4. 异步编程的难点：
+
+   1. 异常处理
+   2. 函数嵌套过深
+   3. 阻塞代码
+   4. 多线程编程：在服务器端，如果服务器是多核 CPU，单个 Node 进程实质上是没有充分利用多核 CPU 的。
+   5. 异步转同步
+
+5. 异步编程解决方案：
+
+   1. 事件发布/订阅模式：Node 自身提供的 events 模块是发布/订阅模式的一个简单实现，Node 中部分模块都继承他。
+   2. Promise/Deferred 模式
+   3. 流程控制库
+
+6. 雪崩问题：高访问量、大并发量的情况下缓存失效的情景，此时大量的请求同时涌入数据库中，数据库无法同时承受如此大的查询请求。
+
+7. Promises/A 规范：
+
+   1. Promise 操作只会在 3 种状态中的一种：未完成态、完成态和失败态
+   2. Promise 的状态只会从未完成态向完成态或失败态转化，不能逆反。完成态和失败态不能互相转化。
+   3. Promise 的状态一旦转化，将不能被更改。
+
+8. Promises/A 规范的 API 要求：
+
+   1. 接受完成态、错误态的回调方法。在操作完成或出现错误时，将会调用对应方法。
+   2. 可选的支持 progress 事件回调作为第三个方法。
+   3. then()方法只接受 function 对象，其余对象将被忽略
+   4. then()方法继续返回 Promise 对象，以实现链式调用
+
+9. 异步并发控制：在 Node 中，我们可以十分方便地利用异步发起并行调用。但是如果并发量过大，我们的下层服务器将会吃不消。如果是对文件系统进行大量并发调用，操作系统的文件描述符数量将会被瞬间用光。同步 I/O 因为每个 I/O 都是彼此阻塞的，总会一个接一个调用，不会出现耗用文件描述符太多的情况，同时性能也是低下的。对于异步 I/O，虽然并发容易实现，但是需要控制过载。
+
+10. 如何控制异步并发负载：
+    1. 通过一个队列来控制并发量
+    2. 如果当前活跃（调用发起但未执行回调）的异步调用量小于限定值，从队列中取出执行。
+    3. 如果活跃调用达到限定值，调用暂时存放在队列中。
+    4. 每个异步方法调用结束时，从队列中取出新的异步调用执行。
