--- a/日志/2019/0916-0922.md
+++ b/日志/2019/0916-0922.md
@@ -9,3 +9,13 @@ https://babeljs.io/docs/en/babel-preset-typescript
 https://github.com/Microsoft/TypeScript-Babel-Starter
 https://github.com/nestjs/nest/issues/986
 https://github.com/cevek/ttypescript/
+https://github.com/LeDDGroup/typescript-transform-paths/issues/4
+
+1. use ttypescript: https://github.com/cevek/ttypescript/
+2. use typescript-transform-paths: https://github.com/LeDDGroup/typescript-transform-paths#readme
+
+---
+
+**[npm config](https://docs.npmjs.com/misc/config)**
+
+save-exact=true 锁死版本
