--- a/日志/2019/0923-0929.md
+++ b/日志/2019/0923-0929.md
@@ -3,3 +3,30 @@
 ---
 
 **[TS生命文件](https://jkchao.github.io/typescript-book-chinese/typings/ambient.html#%E5%A3%B0%E6%98%8E%E6%96%87%E4%BB%B6)**
+
+---
+
+**[Building AR/VR with Javascript and HTML](https://hackernoon.com/building-ar-vr-with-javascript-and-html-28acd1da0371)**
+
+- WebGL enables web content to use an API based on OpenGL ES 2.0 to perform 2D and 3D rendering in an HTML canvas in browsers that support it without the use of plug-ins. WebGL programs consist of control code written in JavaScript and shader code (GLSL) that is executed on a computer's Graphics Processing Unit (GPU)
+- The aim of the project is to create an easy to use, lightweight, 3D library. The library provides <canvas>, <svg>, CSS3D and WebGL renderers.(source: Three.js GitHub page)
+- a-Frame is a web framework for building virtual reality (VR) experiences. Originally from Mozilla, A-Frame was developed to be an easy but powerful way to develop VR content. As an independent open source project, A-Frame has grown to be one of the largest and most welcoming VR communities.
+- AR.js provides both an A-Frame and a three.js extension that allows building marker-based AR scenes. AR.js was built with WebGL and WebRTC, so it’s the only one of the three that works with almost every smartphone, regardless of its OS version.
+
+---
+
+**VR相关**
+
+- 链家的VR技术：收购Auto3D https://zhuanlan.zhihu.com/p/41968019
+- VR素材来源：https://www.zhihu.com/question/275016592 
+  - 设备：拍摄普通平面照片，自备全画幅单反相机和广角镜头（5D3 + 16-35是标配）、机顶闪光灯；拍摄VR看房，VR设备公司配备，但坑爹的是操作这个VR设备需要且只能用iPad，iPad又要自己配，公司没有任何设备补贴。电瓶车或者摩托车用来赶路，自备，要是出车祸算自己的，这时候公司就不认识你了。工伤请假算事假，请一天假扣100块钱。
+  - 摄影师白天拍摄完成后，晚上回家还要进行所谓的“拓图”，就是根据VR机器拍摄的房屋模型画户型图，而在“拓图”之前要先把白天拍的房屋3D模型在iPad端上传到公司后台云端进行算法建模处理，一套80平左右大小的房子等待上传完成并建模要1个小时左右
+  - Auto3D硬件产品：https://36kr.com/p/5056621
+  - Auto3D 生成全景立体图片的流程与前边讲到的 VR 全景照片是一样的。即：图片拍摄、拼接、后期处理。
+
+- [解决全景拍摄规模化产出难，Auto3D 是怎样做的？](http://www.geekpark.net/news/220134)
+- [VR看房和全景看房在技术实现上有何差异](https://www.zhihu.com/question/277350606)
+- [VR看房是如何实现的](https://cloud.tencent.com/developer/ask/142336)
+- [Building AR/VR with Javascript and HTML](https://hackernoon.com/building-ar-vr-with-javascript-and-html-28acd1da0371)
+- [Build Your Next AR/VR Web Application in Javascript](https://medium.com/@kristen.carter/build-your-next-ar-vr-web-app-using-javascript-32d3252e5756)
+- [Google Poly](https://poly.google.com/)
