--- a/日志/2019/0923-0929.md
+++ b/日志/2019/0923-0929.md
@@ -30,3 +30,14 @@
 - [Building AR/VR with Javascript and HTML](https://hackernoon.com/building-ar-vr-with-javascript-and-html-28acd1da0371)
 - [Build Your Next AR/VR Web Application in Javascript](https://medium.com/@kristen.carter/build-your-next-ar-vr-web-app-using-javascript-32d3252e5756)
 - [Google Poly](https://poly.google.com/)
+
+Demo:
+- [360度全景地图](https://glitch.com/~aframe-gallery)
+
+Question:
+- 如何低成本的生成360度全景图片？
+
+[How to Take 360° Photos and Edit in Photoshop](https://untamedscience.com/blog/creating-360-degree-images/)
+[Google Cardboard](https://vr.google.com/cardboard/)
+谷歌全景相机：Google Map Street view
+ios应用：Insta360 Nano
