--- a/日志/2019/0923-0929.md
+++ b/日志/2019/0923-0929.md
@@ -41,3 +41,5 @@ Question:
 [Google Cardboard](https://vr.google.com/cardboard/)
 谷歌全景相机：Google Map Street view
 ios应用：Insta360 Nano
+IOS：Spincle
+Android: Cardboard Camera
