--- a/日志/2019/0923-0929.md
+++ b/日志/2019/0923-0929.md
@@ -2,7 +2,7 @@
 
 ---
 
-**[TS生命文件](https://jkchao.github.io/typescript-book-chinese/typings/ambient.html#%E5%A3%B0%E6%98%8E%E6%96%87%E4%BB%B6)**
+**[TS声明文件](https://jkchao.github.io/typescript-book-chinese/typings/ambient.html#%E5%A3%B0%E6%98%8E%E6%96%87%E4%BB%B6)**
 
 ---
 
