--- a/日志/2019/0923-0929.md
+++ b/日志/2019/0923-0929.md
@@ -43,3 +43,13 @@ Question:
 ios应用：Insta360 Nano
 IOS：Spincle
 Android: Cardboard Camera
+
+---
+
+[5 Web VR Frameworks to Help Developers Build Interesting Design](https://medium.com/@uiuxlab/5-web-vr-frameworks-to-help-developers-build-interesting-design-b4a03197f1f5)
+
+---
+
+[react-360](https://github.com/facebook/react-360)
+[threejs VR](https://github.com/mrdoob/three.js/blob/master/examples/js/vr/WebVR.js)
+[How to create VR Content](https://threejs.org/docs/index.html#manual/en/introduction/How-to-create-VR-content)
