--- a/阅读笔记/深入浅出NodeJS/第五章：内存控制.md
+++ b/阅读笔记/深入浅出NodeJS/第五章：内存控制.md
@@ -2,4 +2,20 @@
 
 ## 第 5 章 内存控制
 
+1. V8的对象分配：在V8中，所有的JavaScript对象都是通过堆来进行分配的。
+
+
+2. 程序的内存分配：一个由C/C++编译的程序占用的内存分为以下几个部分 
+   1. 栈区（stack）：由编译器自动分配释放 ，存放函数的参数值，局部变量的值等。其操作方式类似于数据结构中的栈
+   2. 堆区（heap）：一般由程序员分配释放，若程序员不释放，程序结束时可能由OS回收。注意它与数据结构中的堆是两回事，分配方式倒是类似于链表
+   3. 全局区（静态区）（static）：全局变量和静态变量的存储是放在一块的，初始化的全局变量和静态变量在一块区域，未初始化的全局变量和未初始化的静态变量在相邻的另一块区域。程序结束后有系统释放 
+   4. 文字常量区：常量字符串就是放在这里的。 程序结束后由系统释放 
+   5. 程序代码区：存放函数体的二进制代码。
+
+
+3. 当我们在代码中声明变量并赋值时，所使用对象的内存就分配在堆中。如果已申请的堆空闲内存不够分配新的对象，将继续申请堆内存，直到堆的大小超过V8的限制为止。
+
+4. V8主要的垃圾回收算法：V8的垃圾回收策略主要基于分代式垃圾回收机制。在自动垃圾回收的演变过程中，没有一种垃圾回收算法能够胜任所有的场景。因为在实际的应用中，对象的生存周期长短不一，不同的算法只能针对特定情况具有最好的效果。为此，统计学在垃圾回收算法的发展中产生了较大的作用，现代的垃圾回收算法中按对象的存活时间将内存的垃圾回收进行不同的分代，然后分别堆不同分代的内存施以更高效的算法。V8中，主要将对象分为新生代和老生代两代。
+
+5. 
 
