--- a/日志/2019/1007-1013.md
+++ b/日志/2019/1007-1013.md
@@ -1,1 +1,7 @@
 **[Starting with React 16 and Three.js in 5 minutes](https://blog.bitsrc.io/starting-with-react-16-and-three-js-in-5-minutes-3079b8829817)**
+
+---
+
+跨域相关：
+- 跨域资源共享CORS详解：http://www.ruanyifeng.com/blog/2016/04/cors.html
+- JAVA跨域：https://blog.csdn.net/puma_dong/article/details/51395976
