--- a/日志/2019/1007-1013.md
+++ b/日志/2019/1007-1013.md
@@ -5,3 +5,20 @@
 跨域相关：
 - 跨域资源共享CORS详解：http://www.ruanyifeng.com/blog/2016/04/cors.html
 - JAVA跨域：https://blog.csdn.net/puma_dong/article/details/51395976
+
+---
+
+**[A Closer Look at Top-Level await](https://v8.dev/features/top-level-await)**
+
+Use cases:
+- Dynamic dependency pathing: `const strings = await import('/i18n/${navigator.language}');`
+- Resource initialization: `const connection = await dbConnector();`
+- Dependency fallbacks
+  ```javascript
+  let jQuery;
+  try {
+    jQuery = await import('https://cdn-a.example.com/jQuery');
+  } catch {
+    jQuery = await import('https://cdn-b.example.com/jQuery');
+  }
+  ```
