--- a/阅读笔记/深入浅出NodeJS/第五章：内存控制.md
+++ b/阅读笔记/深入浅出NodeJS/第五章：内存控制.md
@@ -17,5 +17,7 @@
 
 4. V8主要的垃圾回收算法：V8的垃圾回收策略主要基于分代式垃圾回收机制。在自动垃圾回收的演变过程中，没有一种垃圾回收算法能够胜任所有的场景。因为在实际的应用中，对象的生存周期长短不一，不同的算法只能针对特定情况具有最好的效果。为此，统计学在垃圾回收算法的发展中产生了较大的作用，现代的垃圾回收算法中按对象的存活时间将内存的垃圾回收进行不同的分代，然后分别堆不同分代的内存施以更高效的算法。V8中，主要将对象分为新生代和老生代两代。
 
-5. 
+5. 从V8的自动垃圾回收机制的设计角度可以看到，V8对内存使用进行限制的缘由。新生代设计为一个较小的内存空间是合理的，而老生代空间过大对于垃圾回收并无特别意义。V8对内存限制的设置对于Chrome浏览器这种每个选项卡页面使用一个V8实例而言，内存的使用是绰绰有余的。
+
+6. 
 
