--- a/日志/2019/1014-1020.md
+++ b/日志/2019/1014-1020.md
@@ -27,3 +27,15 @@ Many webpages have 8 or 12 social icons and each of those is an additional HTTP 
 Other considerations
 
 It is best to only base64 encode tiny images. If you try to base64 larger images you will end up with a great deal of code in your html and lose out on the performance benefits.
+
+---
+
+**[Should We Rebrand JavaScript?](https://kieranpotts.com/rebranding-javascript/)**
+
+---
+
+**[THE POWER OF JSON.STRINGIFY REPLACER PARAMETER](https://pawelgrzybek.com/til-the-power-of-json-stringify-replacer-parameter/)**
+
+---
+
+**[Client-side vs. Server-side vs. Pre-rendering for Web Apps](https://www.toptal.com/front-end/client-side-vs-server-side-pre-rendering)**
