--- a/日志/2019/1014-1020.md
+++ b/日志/2019/1014-1020.md
@@ -39,3 +39,23 @@ It is best to only base64 encode tiny images. If you try to base64 larger images
 ---
 
 **[Client-side vs. Server-side vs. Pre-rendering for Web Apps](https://www.toptal.com/front-end/client-side-vs-server-side-pre-rendering)**
+
+---
+
+**[The perfect architecture flow for your next Node.js project](https://blog.logrocket.com/the-perfect-architecture-flow-for-your-next-node-js-project/)**
+
+1. Correctly organize our files into folders
+2. Keep a clear separation between the business logic and the API routes
+3. Use a service layer
+4. Use a config folder for configuration files
+5. Have a scripts folder for long npm scripts
+6. Use dependency injection
+7. Use unit testing
+8. Use another layer for third-party services calls
+9. Use a linter
+10. Use a style guide
+11. Always comment your code
+12. Keep an eye on your file sizes
+13. Always use gzip compression
+14. Use promises
+15. Use promises’ error handling support
