--- a/日志/2019/1014-1020.md
+++ b/日志/2019/1014-1020.md
@@ -59,3 +59,31 @@ It is best to only base64 encode tiny images. If you try to base64 larger images
 13. Always use gzip compression
 14. Use promises
 15. Use promises’ error handling support
+
+---
+**[腾讯云函数计算冷启动优化实践](https://cloud.tencent.com/developer/article/1461709)**
+
+冷启动：函数实例如果不存在，需要创建容器，下载部署代码。这些过程耗时百毫秒到几秒不等，称为冷启动
+
+函数冷启动就是指函数第一次调用时平台部署函数实例的过程。不单止函数计算，也许万事都有冷启动。比如TCP通信之前的三次握手，HTTPS访问的初始安全验证过程等等。
+
+冷启动耗时大头主要是以下三方面：
+1. 虚拟机和容器的创建过程，传统的虚拟机创建通常需要分钟的级别，容器需要秒的级别
+2. 函数代码的下载过程，主要取决于代码的大小，下载耗时从几十毫秒到几秒不等
+3. VPC网络的打通过程，主要是部署弹性网卡和路由下发的过程，通常耗时秒级别
+
+---
+
+**[Serverless 掀起新的前端技术变革](https://www.infoq.cn/article/b2cmAUxRChV-tuZbFQiP)**
+
+Serverless 简介: 根据 CNCF 的定义，Serverless 是指构建和运行不需要服务器管理的应用程序的概念。
+> Serverless computing refers to the concept of building and running applications that do not require server management. — CNCF
+
+Serverless 的主要特点有：
+- 事件驱动：函数在 FaaS 平台中，需要通过一系列的事件来驱动函数执行。
+- 无状态：因为每次函数执行，可能使用的都是不同的容器，无法进行内存或数据共享。如果要共享数据，则只能通过第三方服务，比如 Redis 等。
+- 无运维：使用 Serverless 我们不需要关心服务器，不需要关心运维。这也是 Serverless 思想的核心。
+- 低成本：使用 Serverless 成本很低，因为我们只需要为每次函数的运行付费。函数不运行，则不花钱，也不会浪费服务器资源
+
+基于 Serverless 的服务端渲染:
+使用 Serverless 来做服务端渲染，就是将以往的每个路由，都拆分为一个个函数，再在 FaaS 上部署对应的函数。这样用户请求的 path，对应的就是每个单独的函数。通过这种方式，就将运维操作转移到了 FaaS 平台，前端做服务端渲染，就不用再关心服务端程序的运维部署了。
