--- a/日志/2019/1021-1027.md
+++ b/日志/2019/1021-1027.md
@@ -3,3 +3,6 @@
 getImageData()这个API需要四个参数，前两个是获取图片数据的起点，后两个是提取的图像数据矩形区域的宽度和高度，我们要得到图片全部的数据所以后两个参数就是图片的宽高，于此同时我们也要把canvas的宽高设置为图片的宽高能完全装下图片。
 
 按顺序来看前四位组成一个以RGBA顺序的数据： rgba(red, green, blue, alpha)
+
+**TSC编译ts文件的时候不处理alias路径是一个feature:**
+处理方法：使用ttypescript处理
