--- a/日志/2019/1104-1110.md
+++ b/日志/2019/1104-1110.md
@@ -2,3 +2,7 @@
 
 1. 无论是文本传输还是二进制传输，其实均是将被传输对象转化为二进制字节进行传输的，很多人认为文本传输，顾名思义，就是网络直接传输文本，这是不对的
 2. 无论是文本传输还是二进制传输，均是需要有一定的编码方式的。如果一个被传输对象是utf8格式的字符串，那么无论是文本传输还是二进制传输给客户端，客户端解析也必须使用utf8进行decode来获得该字符串。
+
+ASCII 模式和BINARY模式的区别是回车换行的处理，binary模式不对数据进行任何处理，asci模式将回车换行转换为本机的回车字符，比如Unix下是\n,Windows下是\r\n，Mac下是\r
+
+ascii模式下会转换文件，不能说是不同系统对回车换行解释不同，而是不同的系统有不同的行结束符，unix系统下行结束符是一个字节，即十六进制的0A，而ms的系统是两个字节，即十六进制的0D0A，所以当你用ascii方式从unix的ftp server下载文件时(不管是二进制或者文本文件)，每检测到一个字节是0A，就会自动插入一个0D，所以如果你的文件是二进制文件比如可执行文件、压缩包什么的，就肯定不能用了。如果你的文件就是unix下的文本文件，你用 ascii模式是正确的，要是误用了binary模式，你在windows上看这个文件是没有换行的，里面是一个个的黑方块。
