--- a/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
+++ b/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
@@ -1,3 +1,18 @@
 # 深入浅出 NodeJS
 
 ## 第 7 章 网络编程
+
+1. TCP 服务的事件
+   1. 服务器事件：对于通过 net.createServer()创建的服务器而言，它是一个 EventEmitter 实例，它的自定义事件有如下几种：
+      - listening：在调用 server.listen()绑定端口或者 Domain Socket 后出发
+      - connection：每个客户端套接字连接到服务器端时出发
+      - close：当服务器关闭时触发，在调用 server.close()后，服务器将停止接受新的套接字连接，但保持当前存在的连接
+      - error：当服务器发生异常时，将会触发该事件
+   2. 连接事件：服务器可以同时与多个客户端保持连接，对于每个连接而言时典型的可写可读 Stream 对象。
+      - data：当一端调用 write()发送数据时，另一端会触发 data 事件，事件传递的数据即是 write()发送的数据。
+      - end：当连接中的任意一端发送了 FIN 数据时，将会触发该事件
+      - connect：该事件用于客户端，当套接字与服务器端连接成功时会被触发
+      - drain：当任意一端调用 write()发送数据时，当前这端会触发该事件
+      - error：当异常发生时，触发该事件
+      - close：当套接字完全关闭时，触发该事件
+      - timeout：当一定时间后连接不再活跃时，该事件将会被触发，通知用户当前连接已经被闲置了
