--- a/日志/2019/1118-1124.md
+++ b/日志/2019/1118-1124.md
@@ -1,1 +1,62 @@
 **[Typescript中interface和type的区别](https://juejin.im/post/5c2723635188252d1d34dc7d)**
+
+type和interface的不同点：
+
+**type 可以而 interface 不行**
+1. type 可以声明基本类型别名，联合类型，元组等类型
+```javascript
+// 基本类型别名
+type Name = string
+
+// 联合类型
+interface Dog {
+    wong();
+}
+interface Cat {
+    miao();
+}
+
+type Pet = Dog | Cat
+
+// 具体定义数组每个位置的类型
+type PetList = [Dog, Pet]
+```
+
+2. type 语句中还可以使用 typeof 获取实例的 类型进行赋值
+```javascript
+// 当你想获取一个变量的类型时，使用 typeof
+let div = document.createElement('div');
+type B = typeof div
+```
+
+3. 其他骚操作
+```javascript
+type StringOrNumber = string | number;  
+type Text = string | { text: string };  
+type NameLookup = Dictionary<string, Person>;  
+type Callback<T> = (data: T) => void;  
+type Pair<T> = [T, T];  
+type Coordinates = Pair<number>;  
+type Tree<T> = T | { left: Tree<T>, right: Tree<T> };
+```
+
+**interface 可以而 type 不行**
+interface 能够声明合并
+```javascript
+interface User {
+  name: string
+  age: number
+}
+
+interface User {
+  sex: string
+}
+
+/*
+User 接口为 {
+  name: string
+  age: number
+  sex: string 
+}
+*/
+```
