--- a/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
+++ b/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
@@ -16,3 +16,16 @@
       - error：当异常发生时，触发该事件
       - close：当套接字完全关闭时，触发该事件
       - timeout：当一定时间后连接不再活跃时，该事件将会被触发，通知用户当前连接已经被闲置了
+
+2. 构建UDP服务：
+   1. UDP又称用户数据包协议，与TCP一样同属于网络传输层。
+   2. UDP与TCP最大的不同是UDP不是面向连接的。TCP中连接一旦建立，所有的会话都基于连接完成，客户端如果要与另一个TCP服务通信，需要创建另一个套接字来完成连接。
+   3. UDP中一个套接字可以与多个UDP服务通信，它虽然提供面向事务的简单不可靠信息传输服务，在网络差的情况下存在丢包严重的问题，但是由于它无须连接，资源消耗低，处理快速且灵活，所以常用于丢包不会产生重大影响的场景，例如音频视频。
+   4. 创建UDP套接字：dgram模块
+   5. UDP套接字事件：
+      1. message
+      2. listening
+      3. close
+      4. error
+
+3. Node的http模块包含对HTTP处理的封装。在Node中，HTTP服务继承自TCP服务器(net模块)，它能够与多个客户端保持连接，由于其采用事件驱动的形式，并不为每一个连接创建额外的线程活进程，保持很低的内存占用，所以能实现高并发。
