--- a/日志/2019/1223-1229.md
+++ b/日志/2019/1223-1229.md
@@ -5,3 +5,53 @@
 - Trend 3: Better Onboarding
 - Trend 4: Push Notification Requests with Personality
 - Trend 5: PWA and Native App Companions
+
+---
+
+**[Command-line tool and terminal JSON viewer](https://github.com/antonmedv/fx)**
+
+---
+
+**[20 ways to become a better Node.js developer in 2020](https://medium.com/@me_37286/20-ways-to-become-a-better-node-js-developer-in-2020-d6bd73fcf424)**
+
+- Use TypeScript features thoughtfully
+- Modernize your testing toolbox. Ava & Jest are changing the game
+- Plan your ES6 modules usage strategy. See, it’s a bit tricky
+- Meet the latest JavaScript features that are turning green soon
+- Experiment architectures outside of your comfort zone. Note how GraphQL is disrupting the traditional models
+- Check out the winner of the 2019 oscar — Nest.js
+- Apply gradual deployment techniques like feature-flagging, canary or traffic shadowing
+- Shift your testing left — test more things and sooner
+- Shift your testing right — test in/with production
+- Be ready to use your new async pocket knife — worker threads
+- Deepen your Docker and Kubernetes understanding. It highly affects your Node.js code.
+- Security: Learn to think like an attacker by skimming through vulnerable code examples
+- Learn at least one: ELK or Prometheus
+- Use machine learning as a black-box product
+- Sleep >7 hours a night. This matters far more than any technology you use and scientifically prooved to make you a better developer
+- Quit Express, it’s aged and not maintained properly. Fastify and Koa are great candidates in 2020
+- Revisit these bullets from last year — some are still highly relevant
+- Enrich your CI with automated quality tools
+- Enrich your mindset, diversify your toolbox
+- Get inspiration from these great 5 starter projects
+
+---
+
+**[What’s Deno, and how is it different from Node.js?](https://blog.logrocket.com/what-is-deno/)**
+
+Deno is a secure Typescript runtime built on V8, the Google runtime engine for JavaScript.
+
+It was built with:
+- Rust (Deno’s core was written in Rust, Node’s in C++)
+- Tokio (the event loop written in Rust)
+- TypeScript (Deno supports both JavaScript and TypeScript out of the box)
+- V8 (Google’s JavaScript runtime used in Chrome and Node, among others)
+
+Among the most important of Deno’s features is its focus on security.
+As opposed to Node, Deno by default executes the code in a sandbox, which means that runtime has no access to:
+- The file system
+- The network
+- Execution of other scripts
+- The environment variables
+
+Deno, just like browsers, loads modules by URLs.
