--- a/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
+++ b/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
@@ -29,3 +29,31 @@
       4. error
 
 3. Node的http模块包含对HTTP处理的封装。在Node中，HTTP服务继承自TCP服务器(net模块)，它能够与多个客户端保持连接，由于其采用事件驱动的形式，并不为每一个连接创建额外的线程活进程，保持很低的内存占用，所以能实现高并发。
+
+4. HTTP服务的事件：
+   1. connection：当一个连接建立时，服务器触发一次connection事件
+   2. request：当请求数据发送到服务器端，在解析出HTTP请求头后，触发该事件
+   3. close：当已有的连接都断开时，出发该事件
+   4. checkContinue：请求头带Expect：100-continue的请求到服务器，触发该事件
+   5. connect：客户端发起CONNECT请求时
+   6. upgrade：客户端在请求头中带上Upgrade字段
+
+5. HTTP客户端事件：
+   1. response：得到服务器响应时触发
+   2. socket：当底层连接池中建立的连接分配给当前请求对象时，触发
+   3. connect：当服务端响应客户端的CONNECT请求时触发
+   4. upgrade：客户端向服务器端发起Upgrade请求时，如果服务器端响应了101 Switching Protocols状态，触发
+   5. continue：客户端向服务器端发起Expect：100-continue头事件，服务端响应100时触发
+
+6. 构建WebSocket服务
+   1. WebSocket客户端基于事件的编程模型与Node中自定义事件相差无几
+   2. WebSocket实现了客户端与服务器端之间的长连接，而Node事件驱动的方式十分擅长与大量的客户端保持高并发连接
+
+7. WebSocket比Http的优势：
+   1. 客户端与服务器端只建立一个TCP连接，可以使用更少的连接
+   2. WebSocket服务器端可以推送数据到客户端，比HTTP请求响应模式更灵活、更高效
+   3. 有更轻量级的协议头，减少数据传送量
+
+8. Node在网络安全上提供了3个模块，分别是crypo、tls、https。其中crypto主要用于加解密，SHA1、MD5等加密算法都在其中有体现。真正用于网络的是另外两个模块。tls模块提供了与net模块类似的功能，区别在于它建立在TLS/SSL加密的TCP连接上。对于https而言，与http模块接口一致，区别也仅在于它建立于安全的连接之上。
+
+9. TLS/SSL是一个公钥/私钥的结构，它是一个非对称的结构，每个服务器端和客户端都有自己的公私钥。
