--- a/日志/2019/1223-1229.md
+++ b/日志/2019/1223-1229.md
@@ -55,3 +55,7 @@ As opposed to Node, Deno by default executes the code in a sandbox, which means 
 - The environment variables
 
 Deno, just like browsers, loads modules by URLs.
+
+---
+
+**[Mastering JS console.log like a Pro](https://medium.com/javascript-in-plain-english/mastering-js-console-log-like-a-pro-1c634e6393f9)**
