--- a/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
+++ b/阅读笔记/深入浅出NodeJS/第七章：网络编程.md
@@ -57,3 +57,5 @@
 8. Node在网络安全上提供了3个模块，分别是crypo、tls、https。其中crypto主要用于加解密，SHA1、MD5等加密算法都在其中有体现。真正用于网络的是另外两个模块。tls模块提供了与net模块类似的功能，区别在于它建立在TLS/SSL加密的TCP连接上。对于https而言，与http模块接口一致，区别也仅在于它建立于安全的连接之上。
 
 9. TLS/SSL是一个公钥/私钥的结构，它是一个非对称的结构，每个服务器端和客户端都有自己的公私钥。
+
+10. node在底层采用的是openssl实现TLS/SSL的，为此要生成公钥和私钥可以通过openssl完成。
