--- a/阅读笔记/C程序设计语言/第一章：导言.md
+++ b/阅读笔记/C程序设计语言/第一章：导言.md
@@ -10,3 +10,5 @@
 6. %o表示八进制数，%x表示十六进制数，%c表示字符，%s表示字符串，%%表示百分号本身。
 7. 字符在键盘、屏幕或其他的任何地方无论以什么形式表现，它在机器内部都是以位模式存储的。char类型专门用于存储这种字符型数据，任何整型也可以用于存储字符型数据。
 8. long整型，至少要占用32位存储单元。
+9. 函数不一定都有返回值。不带表达式的return语句将把控制权返回给调用者，但不返回有用的值。这等同于在到达函数的右终结花括号时，函数就结束了。主调函数也可以忽略掉函数返回的值。由于main函数本身也是函数，因此也可以向其调用者返回一个值，该调用者实际上就是程序的执行环境。一般来说返回值为0表示正常终止，返回值为非0表示出现异常情况或出错结束条件。
+10. 从语法角度看，外部变量的定义与局部变量的定义是相同的，但由于他们位于各函数的外部，因此这些变量是外部变量。函数在使用外部变量之前，必须要知道外部变量的名字。要达到该目的，一种方式是在函数中使用extern类型的声明。这种类型的声明除了在前面加一个关键字extern外，其他方面与普通变量的声明相同。某些情况下可以省略extern声明。在源文件中，如果外部变量的定义出现在使用它的函数之前，那么在那个函数中就没有必要使用extern声明。在通常的做法中，所有外部变量的定义都放在源文件的初始处，这样就可以省略extern声明。
