--- a/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
+++ b/阅读笔记/C程序设计语言/第二章：类型、运算符与表达式.md
@@ -1,3 +1,16 @@
 # C程序设计语言
 
 ## 第二章：类型、运算符与表达式
+
+1. ANSI标准对语言的基本类型和表达式做了许多小的修改与增补。所有整型都包括signed(带符号)和unsigned(无符号)两种形式，且可以表示无符号常量与十六进制字符常量。浮点运算可以以单精度进行，还可以使用更高精度的long double类型运算。
+2. 数据类型及长度
+  - char: 字符型，占用一个字节，可以存放本地字符集中的一个字符
+  - int: 整型，通常反映了所用机器中整数的最自然长度
+  - float: 单精度浮点型
+  - double: 双精度浮点型
+3. short类型通常为16位，long类型通常为32位，int类型可以是16位或32位
+4. 类型限定符signed和unsigned可用于限定char类型或任何整型
+5. 后缀ul或UL表示是unsigned long类型
+6. 带前缀0的整型常量表示它为八进制形式；前缀为0x或0X，则表示它为十六进制形式。
+7. 常量表达式是仅仅包含常量的表达式，这种表达式在编译时求值，而不在运行时求值。
+8. 字符串常量就是字符数组，字符串使用一个字符'\0'作为串的结尾，因此存储字符串的物理存储单元比括在双引号中的字符数多一个。
